--- a/tvmaze.html
+++ b/tvmaze.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-    <title>TV Maze</title>
-    <link rel="stylesheet"
-      href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
-  </head>
-  <body>
-    <div class="container">
+
+<head>
+  <title>TV Maze</title>
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
+</head>
+
+<body>
+  <div class="container">
 
     <h1>TV Maze</h1>
 
     <form class="form-inline" id="search-form">
-      <input class="form-control" id="search-query" value="bletchley">
+      <input class="form-control" id="search-query" placeholder="Search">
       <button class="btn btn-primary" type="submit">Go!</button>
     </form>
 
@@ -19,16 +20,37 @@
     </div>
 
     <section style="display: none" id="episodes-area">
-      <h2>Episodes</h2> 
+      <h2>Episodes</h2>
       <ul id="episodes-list">
       </ul>
-    </section>  
+    </section>
+
+    <!-- <div class="modal fade" id="episodeModal" tabindex="-1" aria-labelledby="episodeModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="episodeModalLabel">Episodes</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <ul id="episodes-list">
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
     <script src="http://unpkg.com/jquery"></script>
+    <script src="https://unpkg.com/popper"></script>
+    <script src="https://unpkg.com/bootstrap"></script>
     <script src="http://unpkg.com/axios/dist/axios.js"></script>
     <script src="tvmaze.js"></script>
 
-    </div>
+  </div>
 
-  </body>
+</body>
+
 </html>
