--- a/tvmaze.html
+++ b/tvmaze.html
@@ -19,29 +19,23 @@
     <div class="row mt-3" id="shows-list">
     </div>
 
-    <section style="display: none" id="episodes-area">
-      <h2>Episodes</h2>
-      <ul id="episodes-list">
-      </ul>
-    </section>
-
-    <!-- <div class="modal fade" id="episodeModal" tabindex="-1" aria-labelledby="episodeModalLabel" aria-hidden="true">
+    <div class="modal fade" id="episodeModal" tabindex="-1" aria-labelledby="episodeModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="episodeModalLabel">Episodes</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
             <ul id="episodes-list">
             </ul>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <script src="http://unpkg.com/jquery"></script>
     <script src="https://unpkg.com/popper"></script>
